# desktop_shortcut

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: AddDesktopShortcut.cmake
